manifests/petclinic-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: petclinic
  name: petclinic
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: petclinic
    spec:
      containers:
      - env:
        - name: SPRING_DATASOURCE_URL
          value: jdbc:mysql://mysql-db:3306/petclinic?autoReconnect=true&useSSL=false
        image: rozen88/spring-petclinic-data-jdbc
        name: petclinic
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
          
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        hpa:
          enabled: true
          min: 1
          max: 3
          cpu: 80
          mem: 80
        ports:
        - containerPort: 8080
        resources: {}

      terminationGracePeriodSeconds: 30
      restartPolicy: Always
status: {}
