manifests/petclinic-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: petclinic-127.0.0.1.nip.io
    http:
      paths:
      - backend:
          serviceName: petclinic
          servicePort: 8080
